# match3

./: .gitignore  CMakeLists.txt  README.md  match3.desktop
src/: lmao.txt  main.c
